--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - npm install -D
   - cd ./test/smock/template
   - npm install -D
+  - cd ../../../
 
 scripts:
-  - npm test
+  - npm run test
